[package]
name = "xf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.14"

dirs = "5.0.1"
dunce = "1.0.5"

owo-colors = { version = "4.0.0", features = ["supports-color", "supports-colors"] }
regex = "1.10.6"
strum = "0.26.3"
strum_macros = "0.26.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = ["Win32_Storage_FileSystem"]
