[package]
name = "xf"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
chrono = "0.4.38"
clap = "4.5.14"

dirs = "5.0.1"
dunce = "1.0.5"
hashbrown = "0.15.0"

owo-colors = { version = "4.0.0", features = ["supports-color", "supports-colors"] }
regex = "1.10.6"
strum = "0.26.3"
strum_macros = "0.26.4"
terminal_size = "0.4.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
]

[target.'cfg(unix)'.dependencies.users]
version = "0.11.0"
